# poetry2nix-error-again

./: pyproject.toml  shell.nix
